commit previo a github

--- a/Templates/registered.html
+++ b/Templates/registered.html
@@ -14,6 +14,12 @@
             <p class="fs-4">{{name}}, {{lastName}}, you have successfully registered for the {{curso}} course <span class="text-success">&#x2713;</span></p>
         </div>
     </div>
+<!--add a button below the container to redirect to the url/registros -->
+    <div class="container mt-5">
+        <div class="card p-4 text-center">
+            <a href="/registros" class="btn btn-primary">View records</a>
+        </div>
+    </div>
 
     <!-- Agregar enlaces a los archivos de Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
