--- a/Templates/registros.html
+++ b/Templates/registros.html
@@ -10,20 +10,22 @@
 <body class="bg-light">
 
     <div class="container mt-5">
-        <h1 class="text-center">Registros</h1>
         <form action="/registros" method="post" class="mb-3">
             <div class="input-group">
-                <input class="form-control" placeholder="Nombre" name="NombreEnRegistro" type="text">
-                <button class="btn btn-primary" type="submit">Buscar</button>
+                <input class="form-control" placeholder="Name" name="NombreEnRegistro" type="text">
+                <button class="btn btn-primary" type="submit">Search</button>
             </div>
         </form>
+        
+        <h1 class="text-center">Records</h1>
+
 
         <div class="table-responsive">
             <table class="table">
                 <thead>
                     <tr>
-                        <th>Nombre</th>
-                        <th>Cursosss</th>
+                        <th>Name</th>
+                        <th>Courses</th>
                     </tr>
                 </thead>
                 <tbody>
